kubernetes/addons/envoy-gateway/gateway.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
  labels:
    gateway.edinstance.uk/route-access: "true"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: gateway-system
spec:
  gatewayClassName: eg
  addresses:
    - type: IPAddress
      value: 192.168.2.100
  listeners:
    - name: http-local
      protocol: HTTP
      port: 80
      hostname: "*.local.edinstance.uk"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.edinstance.uk/route-access: "true"
    - name: http-public
      protocol: HTTP
      port: 80
      hostname: "*.edinstance.uk"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.edinstance.uk/route-access: "true"
    - name: https-local
      protocol: HTTPS
      port: 443
      hostname: "*.local.edinstance.uk"
      tls:
        mode: Terminate
        certificateRefs:
          - name: local-edinstance-uk-wildcard-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.edinstance.uk/route-access: "true"
    - name: postgres-local
      protocol: TCP
      port: 5432
      allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.edinstance.uk/route-access: "true"
