kubernetes/addons/envoy-gateway/postgres-route.yml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: test-db-local
  namespace: apps
spec:
  parentRefs:
    - name: main-gateway
      namespace: gateway-system
      sectionName: postgres-local
  rules:
    - backendRefs:
        - name: test-db-pooler-rw
          port: 5432
